--- a/client/src/hello-world/index.html
+++ b/client/src/hello-world/index.html
@@ -1,36 +1,22 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>noa-examples: hello-world</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <style type="text/css">
-    body {
-      background-color: white;
-      margin: 0px;
+  <meta charset="utf-8" />
+  <title>Fresh2</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
       overflow: hidden;
-    }
-
-    #reticle {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      width: 20px;
-      height: 20px;
-      line-height: 20px;
-      margin: -10px 0 0 -10px;
-      z-index: 99;
-      color: white;
-      text-shadow: 1px 1px 0px black;
-      text-align: center;
+      font-family: Arial, Helvetica, sans-serif;
     }
   </style>
 </head>
-
 <body>
-  <div id="reticle">+</div>
-  <script type="module" src="./index.js"></script>
+  <!-- Load the game as the main entry -->
+  <script type="module" src="/hello-world/index.js"></script>
 </body>
-
 </html>
