Register selectClass message handler and stabilize room messaging

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,25 +1,22 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>noa-examples</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <style type="text/css">
-    body {
+  <meta charset="utf-8" />
+  <title>Fresh2</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
       font-family: Arial, Helvetica, sans-serif;
     }
   </style>
 </head>
-
 <body>
-  <h3>Noa engine demos:
-    <ul>
-      <li><a href="hello-world/">hello-world</a> - a bare minimum world, suitable for building on top of</li>
-      <li><a href="test/">testbed</a> - a testbed world that minimally implements most/all engine features</li>
-      <li><a href="stress/">stress test</a> - tests the performance of long view distances and crunchy terrain</li>
-    </ul>
-  </h3>
+  <!-- Load the game as the main entry -->
+  <script type="module" src="/hello-world/index.js"></script>
 </body>
-
 </html>
