Register selectClass message handler and stabilize room messaging

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -17,6 +17,6 @@
 </head>
 <body>
   <!-- Load the game as the main entry -->
-  <script type="module" src="/hello-worlsdfdssd/index.js"></script>
+  <script type="module" src="/hello-world/index.js"></script>
 </body>
 </html>
